解决部分组件使用flex布局后端无发生成pdf

--- a/client/common/styles/variables.scss
+++ b/client/common/styles/variables.scss
@@ -3,10 +3,10 @@
   =================================================================*/
 $border-color : #e6ebed;
 $white : #fff;
-$primary : #25A589;
-$success : #3DBD37;
-$gray : #7F8593;
-$error : #ea5361;
+$primary : #0A68B3;
+$success : #0cbd5e;
+$gray : #707070;
+$error : #c31712;
 $color-gradient : linear-gradient(to right, #5ac66a 0%, #3caa7d 80%, #3AA27F 100%); // 渐变
 $color-gradient-hover : linear-gradient(to right, #5ac66a 0%, #3caa7d 80%, #3AA27F 100%); // 渐变
 $color-gradient : linear-gradient(to right, #5ac66a 0%, #3caa7d 80%, #3AA27F 100%); // 渐变
