--- a/client/common/styles/variables.scss
+++ b/client/common/styles/variables.scss
@@ -1,18 +1,18 @@
 /*=================================================================
   颜色
   =================================================================*/
-$border-color : #e6ebed;
+$border-color : #cbced4;
+$border-color-active: #cedae8;
 $white : #fff;
-$primary : #0A68B3;
+$primary : #0a68b3;
 $success : #0cbd5e;
 $gray : #707070;
 $error : #c31712;
-$color-gradient : linear-gradient(to right, #5ac66a 0%, #3caa7d 80%, #3AA27F 100%); // 渐变
-$color-gradient-hover : linear-gradient(to right, #5ac66a 0%, #3caa7d 80%, #3AA27F 100%); // 渐变
-$color-gradient : linear-gradient(to right, #5ac66a 0%, #3caa7d 80%, #3AA27F 100%); // 渐变
-// $page-bg-color : #F0F2F5;
-$page-bg-color : #f9f9f9;
-
+$page-bg-color : #e4e7ee;
+$page-bg-deepcolor: #cfd6e6;
+$font-color-base: #161616;
+$active-bg-color: #e1e4eb;
+$line-color: #adb1b8;
 
 /*=================================================================
   动画
