修复上次演示的一些问题

--- a/client/common/styles/index.scss
+++ b/client/common/styles/index.scss
@@ -528,7 +528,8 @@ img {
   鼠标样式
   =================================================================*/
 
-.cursor-pointer, .iconfont {
+.cursor-pointer,
+.iconfont {
   cursor: pointer;
 }
 
