--- a/client/common/styles/index.scss
+++ b/client/common/styles/index.scss
@@ -565,7 +565,7 @@ img {
     display: block;
     height: 0;
     clear: both;
-    visibility: hidden
+    visibility: hidden;
   }
 
   .search-item-label {
